# 5pm_mail_parser

./: README.md  generate_newsletter.py  gmail_retriever.ipynb  gmail_retriever.py  html_parser.ipynb  html_parser.py  newsletter_5pm_240215.html  prompt_generator.ipynb  pyproject.toml
data/: email_links.jsonl  newsletter_5pm_240214.html  newsletter_5pm_240215.txt  newsletter_5pm_240216.html  newsletter_5pm_240219.html  newsletter_5pm_240219.txt  newsletter_5pm_240220.html  newsletter_5pm_240221.html  newsletter_5pm_240222.html  newsletter_5pm_240223.html  newsletter_5pm_240226.html  newsletter_5pm_240227.html  newsletter_5pm_240228.html  newsletter_5pm_240229.html  newsletter_5pm_240301.html  newsletter_5pm_240304.html  newsletter_5pm_240305.html  newsletter_5pm_240306.html  newsletter_5pm_240307.html  newsletter_5pm_240308.html
