[tool.poetry]
name = "5pm-mail-parser"
version = "0.1.0"
description = ""
authors = ["Simon Nachtergaele <Simon.Nachtergaele@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.1.4"
python-dotenv = "^1.0.1"
pandas = "^2.2.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
